--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</style>
 </head>
 <body>
-	<h2>Coup</h2>
+	<h2><a href="https://luiscastro193.github.io/qr-generator/#https%3A%2F%2Fluiscastro193.github.io%2Fcoup%2F" target="_blank" rel="noopener">Coup</a></h2>
 	<h3>Acciones generales</h3>
 	<ol>
 		<li><strong>Ingreso</strong>: Gana 1 moneda.</li>
